console/app/assets/stylesheets/console/_tile.scss
.label-tags {
  a.label {
    color: $openshiftLinkGray;
    background-color: transparent;
    text-decoration: none;
    margin-right: 10px;
    margin-top: -5px;
    margin-left: -6px;
    text-shadow: none;
    &:hover {
      color: #111;
      background-color: #eee !important;
    }
  }
}

.tile {
  background: $consolePanelColor;
  @include panel_default_boxshadow();
  color: $consoleTextColorDefault;
  padding: 10px 20px 15px; 
  margin-bottom: 20px; 
  &.cartridge_type .warning {
    color: $orange;
  }
  > p {
    margin-bottom: $baseLineHeight / 1.5;
    &:last-child {
      margin-bottom: 0;
    }
  }
  > ul.meta > li > label {
    display: inline;
  }
  .flow {
    > .flow-block.right {
      white-space: nowrap;
      .count, .restart {
        margin-left: 20px;
      }
      .gear-icon, {
        font-size: 20px;
      }
      .restart {
        &.confirm-container {
          display: inline-block;
          position: relative; 
          text-align: left !important;
          white-space: normal;
          strong {
            font-weight: 400;
          }
        }
        .font-icon {
          font-size: 20px;
        }
      }
    }
    + .created {
      color: #888;
      font-size: $tinyFontSize;
      font-weight: 300;
      margin-top: -6px;
    }
  }
  h1.flow {
    margin-bottom: 0;
  }
  h2 {
    @include clearfix();
  }
  .gear-icon {
    color: #ccc;
  }
  .tile-featured h3 {
    margin-right: 20px;
  }
}

.tile-click {
  cursor: pointer;
  position: relative;
  h3 {
    margin-right: 10px;
  }
  &:hover {
    background: #fff !important;
    @include panel_default_boxshadow_hover();
    .font-icon-block {
      opacity: 1;
    }
    .tile-target {
      color: $openshiftBrightRed;
      &:hover {
        text-decoration: none;
      }
    }
  }
  .font-icon-block {
    position: absolute;
    right: 25px;
    top: 37%;
    font-size: $largeFontSize; 
    color: #666;
    opacity: .3;
  }
  &.tile-featured .font-icon-block {
    top: 20px;
  }
}

.tile-compact {
  padding-right: 35px;
  h3 {
    margin-right: 10px;
    margin-bottom: 0;
  }
  a.label {
    display: inline-block;
    vertical-align: middle;
    margin-top: -5px;
  }
}

@media (max-width: 767px) {
  .section-body .row > .tile-click {
    @include expand_for_phone();
  }
}

